<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brother"
        android:visibility="visible"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line"
        android:visibility="visible"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        android:visibility="visible"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:fontFamily="@font/gilroy_bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parents"
        android:visibility="visible"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/yellow"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:visibility="visible"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv4" />


    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_compliments"
        android:visibility="visible"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv5" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fam_compliments"
        android:visibility="visible"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:fontFamily="@font/gilroy_medium"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv6" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
